# piter

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  gino.html  pyproject.toml
.circleci/: config.yml  release.yml
.github/actions/publish-wheel/: action.yml
.github/actions/python-tests/: action.yml
.github/workflows/: pr-develop.yml  pr-main.yml  publish-wheel.yml
piter/: __init__.py
piter/cli/: cli.py
piter/renderers/html/: __init__.py
piter/renderers/html/templates/: __init__.py  _base.html  _header.html  images_clusters_simple.html  images_table_simple.html
piter/utils/: images.py
tests/: __init__.py  test_cli.py  test_piter.py  test_renderers.py
tests/utils/: test_images.py
